Make data-driven Auto-Smelt can now be applied to axes and swords as well Update to Forge 39.0.56

--- a/src/main/resources/assets/autosmelt/lang/en_us.json
+++ b/src/main/resources/assets/autosmelt/lang/en_us.json
@@ -1,4 +1,4 @@
 {
   "enchantment.autosmelt.auto-smelt": "Auto-Smelt",
-  "enchantment.autosmelt.auto-smelt.desc": "Converts collected blocks into their cooked counterpart."
+  "enchantment.autosmelt.auto-smelt.desc": "Converts reaped blocks or items into their cooked counterpart."
 }
